--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -10,13 +10,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-nichetoolkit.rest.intercept.enabled=true
-nichetoolkit.rest.intercept.log-enabled=true
-nichetoolkit.rest.intercept.bean-enabled=true
-
-nichetoolkit.rest.error.console-log.rest-exception-enabled=true
-nichetoolkit.rest.error.console-log.common-exception-enabled=true
-
 spring.jackson.default-property-inclusion=non_null
 spring.jackson.parser.allow-unquoted-control-chars=true
 spring.jackson.parser.allow-comments=true
@@ -26,9 +19,30 @@ spring.jackson.time-zone=GMT+8
 
 spring.main.allow-circular-references =true
 
-nichetoolkit.rest.identity.type=CONFIG
+nichetoolkit.rest.intercept.enabled=true
+nichetoolkit.rest.intercept.log-enabled=true
+nichetoolkit.rest.intercept.bean-enabled=true
+
+nichetoolkit.rest.error.console-log.rest-exception-enabled=true
+nichetoolkit.rest.error.console-log.common-exception-enabled=true
+
+nichetoolkit.rest.http.enabled=true
+nichetoolkit.rest.http.http-type=ok_http_client
+
+nichetoolkit.rest.identity.enabled=true
+nichetoolkit.rest.identity.type=config
 nichetoolkit.rest.identity.config.worker-id=1
 nichetoolkit.rest.identity.config.center-id=2
+
+nichetoolkit.rest.md5.enabled=true
+nichetoolkit.rest.md5.cipher=4AFa1sTe45FAst2^aPHV7sVG
+
+nichetoolkit.rest.jwt.enabled=true
+nichetoolkit.rest.jwt.secret-key=4AFa1sTe45FAst2^aPHV7sVG
+nichetoolkit.rest.jwt.issuer=io.github.nichetoolkit
+
+nichetoolkit.rest.radix.enabled=true
+
 
 logging.config=classpath:logback-spring.xml
 logging.file.path=G:\\data\\server\\log
