--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -16,11 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v2
       with:
-        java-version: '1.8'
-        distribution: 'temurin'
+        java-version: 1.8
         cache: maven
-    - name: Build with Maven
+    - name: Build and test with Maven
       run: mvn -B package --file pom.xml
