--- a/rest-toolkit-starter/pom.xml
+++ b/rest-toolkit-starter/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>io.github.nichetoolkit</groupId>
         <artifactId>rest-toolkit-parent</artifactId>
-        <version>1.0.4</version>
+        <version>1.0.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>rest-toolkit-starter</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <name>rest-toolkit-starter</name>
     <packaging>jar</packaging>
     <description>Rest toolkit starter project for Spring Boot</description>
