--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.nichetoolkit</groupId>
     <artifactId>rest-toolkit-parent</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
 
     <modules>
         <module>rest-toolkit-core</module>
@@ -41,7 +41,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.0</version>
+        <version>2.6.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -64,8 +64,8 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.6.0</spring-boot.version>
-        <rest-toolkit.version>1.0.4</rest-toolkit.version>
+        <spring-boot.version>2.6.6</spring-boot.version>
+        <rest-toolkit.version>1.0.5-SNAPSHOT</rest-toolkit.version>
         <guava.version>30.1-jre</guava.version>
         <fusionauth-jwt.version>5.0.0</fusionauth-jwt.version>
         <source-plugin.version>2.2.1</source-plugin.version>
