--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-boot.version>2.6.6</spring-boot.version>
         <rest-toolkit.version>1.0.5-SNAPSHOT</rest-toolkit.version>
-        <guava.version>30.1-jre</guava.version>
+        <rest-okhttp3.version>4.8.1</rest-okhttp3.version>
+        <guava.version>30.1.1-jre</guava.version>
         <fusionauth-jwt.version>5.0.0</fusionauth-jwt.version>
         <source-plugin.version>2.2.1</source-plugin.version>
         <javadoc-plugin.version>2.9.1</javadoc-plugin.version>
