--- a/rest-toolkit-starter/pom.xml
+++ b/rest-toolkit-starter/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>${okhttp3.version}</version>
+            <version>${rest-okhttp3.version}</version>
         </dependency>
 
         <dependency>
