--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -44,5 +44,5 @@ nichetoolkit.rest.jwt.issuer=io.github.nichetoolkit
 nichetoolkit.rest.radix.enabled=true
 
 
-logging.config=classpath:logback-spring.xml
+logging.file.config=classpath:logback-spring.xml
 logging.file.path=G:\\data\\server\\log
