--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.nichetoolkit</groupId>
     <artifactId>rest-toolkit-parent</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
 
     <modules>
         <module>rest-toolkit-core</module>
@@ -65,7 +65,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-boot.version>2.6.6</spring-boot.version>
-        <rest-toolkit.version>1.0.5-SNAPSHOT</rest-toolkit.version>
+        <rest-toolkit.version>1.0.5</rest-toolkit.version>
         <rest-okhttp3.version>4.8.1</rest-okhttp3.version>
         <guava.version>30.1.1-jre</guava.version>
         <fusionauth-jwt.version>5.0.0</fusionauth-jwt.version>
