--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>io.github.nichetoolkit</groupId>
     <artifactId>rest-toolkit-parent</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
 
     <modules>
         <module>rest-toolkit-core</module>
@@ -41,7 +42,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
+        <version>2.7.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -64,8 +65,8 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.6.6</spring-boot.version>
-        <rest-toolkit.version>1.0.5</rest-toolkit.version>
+        <spring-boot.version>2.7.6</spring-boot.version>
+        <rest-toolkit.version>1.0.6-SNAPSHOT</rest-toolkit.version>
         <rest-okhttp3.version>4.8.1</rest-okhttp3.version>
         <guava.version>30.1.1-jre</guava.version>
         <fusionauth-jwt.version>5.0.0</fusionauth-jwt.version>
