--- a/rest-toolkit-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/rest-toolkit-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -70,6 +70,13 @@
       "defaultValue": "false"
     },
     {
+      "name": "nichetoolkit.rest.intercept.userlog-enabled",
+      "type": "java.lang.Boolean",
+      "sourceType": "java.lang.Boolean",
+      "description": "intercept userlog enabled.",
+      "defaultValue": "false"
+    },
+    {
       "name": "nichetoolkit.rest.intercept.bean-enabled",
       "type": "java.lang.Boolean",
       "sourceType": "java.lang.Boolean",
