--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.main.allow-circular-references =true
 
 nichetoolkit.rest.intercept.enabled=true
 nichetoolkit.rest.intercept.log-enabled=true
-nichetoolkit.rest.intercept.bean-enabled=true
+nichetoolkit.rest.intercept.userlog-enabled=true
 
 nichetoolkit.rest.error.console-log.rest-exception-enabled=true
 nichetoolkit.rest.error.console-log.common-exception-enabled=true
