--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
         </license>
     </licenses>
 
+    <organization>
+        <name>NicheToolkit</name>
+        <url>https://github.com/NicheToolkit</url>
+    </organization>
+
     <developers>
         <developer>
             <name>Cyan</name>
