--- a/rest-toolkit-core/pom.xml
+++ b/rest-toolkit-core/pom.xml
@@ -67,7 +67,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
             <scope>compile</scope>
         </dependency>
 
