--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -34,11 +34,11 @@ nichetoolkit.rest.identity.type=config
 nichetoolkit.rest.identity.config.worker-id=1
 nichetoolkit.rest.identity.config.center-id=2
 
-nichetoolkit.rest.md5.enabled=true
-nichetoolkit.rest.md5.cipher=4AFa1sTe45FAst2^aPHV7sVG
+nichetoolkit.rest.sha.enabled=true
+nichetoolkit.rest.sha.secret=4AFa1sTe45FAst2^aPHV7sVG
 
 nichetoolkit.rest.jwt.enabled=true
-nichetoolkit.rest.jwt.secret-key=4AFa1sTe45FAst2^aPHV7sVG
+nichetoolkit.rest.jwt.secret=4AFa1sTe45FAst2^aPHV7sVG
 nichetoolkit.rest.jwt.issuer=io.github.nichetoolkit
 
 nichetoolkit.rest.radix.enabled=true
