--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <okhttp3.version>4.10.0</okhttp3.version>
         <guava.version>31.1-jre</guava.version>
         <fusionauth-jwt.version>5.2.1</fusionauth-jwt.version>
+        <security-rsa.version>1.0.11.RELEASE</security-rsa.version>
 
         <source-plugin.version>2.2.1</source-plugin.version>
         <javadoc-plugin.version>2.9.1</javadoc-plugin.version>
