--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -38,7 +38,7 @@ nichetoolkit.rest.sha.enabled=true
 nichetoolkit.rest.sha.secret=4AFa1sTe45FAst2^aPHV7sVG
 
 nichetoolkit.rest.jwt.enabled=true
-nichetoolkit.rest.jwt.secret=4AFa1sTe45FAst2^aPHV7sVG
+nichetoolkit.rest.jwt.secret-key=4AFa1sTe45FAst2^aPHV7sVG
 nichetoolkit.rest.jwt.issuer=io.github.nichetoolkit
 
 nichetoolkit.rest.radix.enabled=true
