--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -23,7 +23,7 @@ nichetoolkit.rest.intercept.enabled=true
 nichetoolkit.rest.intercept.log-enabled=true
 nichetoolkit.rest.intercept.userlog-enabled=true
 
-nichetoolkit.rest.error.console-log.rest-exception-enabled=true
+nichetoolkit.rest.error.console-log.rest-exception-enabled=false
 nichetoolkit.rest.error.console-log.common-exception-enabled=true
 
 nichetoolkit.rest.http.enabled=true
@@ -42,6 +42,8 @@ nichetoolkit.rest.jwt.secret=4AFa1sTe45FAst2^aPHV7sVG
 nichetoolkit.rest.jwt.issuer=io.github.nichetoolkit
 
 nichetoolkit.rest.radix.enabled=true
+
+#nichetoolkit.rest.logback.enabled=true
 
 logging.config=classpath:logback-spring.xml
 logging.file.path=G:\\data\\server\\log
