--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8080
 
 spring.jmx.enabled=false
-spring.application.name=token-user
-spring.jmx.default-domain=token-user
+spring.application.name=rest-server
+spring.jmx.default-domain=rest-server
 
 server.tomcat.connection-timeout=600s
 spring.servlet.multipart.enabled=true
