--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.nichetoolkit</groupId>
     <artifactId>rest-toolkit-parent</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
 
     <modules>
         <module>rest-toolkit-core</module>
@@ -118,7 +118,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-boot.version>2.7.7</spring-boot.version>
 
-        <rest-toolkit.version>1.0.6-SNAPSHOT</rest-toolkit.version>
+        <rest-toolkit.version>1.0.6</rest-toolkit.version>
 
         <okhttp3.version>4.10.0</okhttp3.version>
         <guava.version>31.1-jre</guava.version>
