--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>rest-toolkit-core</module>
         <module>rest-toolkit-utils</module>
         <module>rest-toolkit-starter</module>
-        <!--<module>rest-toolkit-test-web</module>-->
+<!--        <module>rest-toolkit-test-web</module>-->
     </modules>
 
     <name>rest-toolkit-parent</name>
@@ -47,7 +47,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.7</version>
+        <version>2.7.18</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -116,14 +116,14 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.7.7</spring-boot.version>
+        <spring-boot.version>2.7.18</spring-boot.version>
 
         <rest-toolkit.version>1.0.7-SNAPSHOT</rest-toolkit.version>
 
-        <okhttp3.version>4.10.0</okhttp3.version>
-        <guava.version>31.1-jre</guava.version>
-        <fusionauth-jwt.version>5.2.1</fusionauth-jwt.version>
-        <security-rsa.version>1.0.11.RELEASE</security-rsa.version>
+        <okhttp3.version>4.12.0</okhttp3.version>
+        <guava.version>33.3.0-jre</guava.version>
+        <fusionauth-jwt.version>5.3.3</fusionauth-jwt.version>
+        <security-rsa.version>1.1.5</security-rsa.version>
 
         <source-plugin.version>2.2.1</source-plugin.version>
         <javadoc-plugin.version>2.9.1</javadoc-plugin.version>
