--- a/rest-toolkit-starter/pom.xml
+++ b/rest-toolkit-starter/pom.xml
@@ -75,6 +75,7 @@
             <groupId>io.github.nichetoolkit</groupId>
             <artifactId>rest-toolkit-utils</artifactId>
             <version>${rest-toolkit.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
