--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -27,7 +27,7 @@ nichetoolkit.rest.error.console-log.rest-exception-enabled=false
 nichetoolkit.rest.error.console-log.common-exception-enabled=true
 
 nichetoolkit.rest.http.enabled=true
-nichetoolkit.rest.http.http-type=default
+nichetoolkit.rest.http.http-type=http_client
 
 nichetoolkit.rest.identity.enabled=true
 nichetoolkit.rest.identity.type=config
