exclusion test web

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>rest-toolkit-core</module>
         <module>rest-toolkit-utils</module>
         <module>rest-toolkit-starter</module>
-        <module>rest-toolkit-test-web</module>
+<!--        <module>rest-toolkit-test-web</module>-->
     </modules>
 
     <name>rest-toolkit-parent</name>
