--- a/rest-toolkit-test-web/src/main/resources/application.properties
+++ b/rest-toolkit-test-web/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jackson.time-zone=GMT+8
 spring.main.allow-circular-references =true
 
 nichetoolkit.rest.intercept.enabled=true
-nichetoolkit.rest.intercept.log-enabled=true
+nichetoolkit.rest.intercept.logging-enabled=true
 nichetoolkit.rest.intercept.userlog-enabled=true
 
 nichetoolkit.rest.error.console-log.rest-exception-enabled=false
