--- a/rest-toolkit-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/rest-toolkit-starter/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -68,10 +68,10 @@
       "defaultValue": "false"
     },
     {
-      "name": "nichetoolkit.rest.intercept.log-enabled",
+      "name": "nichetoolkit.rest.intercept.logging-enabled",
       "type": "java.lang.Boolean",
       "sourceType": "java.lang.Boolean",
-      "description": "intercept log enabled.",
+      "description": "intercept logging enabled.",
       "defaultValue": "false"
     },
     {
@@ -226,10 +226,10 @@
       "defaultValue": "true"
     },
     {
-      "name": "nichetoolkit.rest.logback.log-key",
+      "name": "nichetoolkit.rest.logback.logging-key",
       "type": "java.lang.String",
       "sourceType": "java.lang.String",
-      "description": "logback log key."
+      "description": "logback logging key."
     },
     {
       "name": "nichetoolkit.rest.logback.attributes",
@@ -284,7 +284,7 @@
       ]
     },
     {
-      "name": "nichetoolkit.rest.intercept.log-enabled",
+      "name": "nichetoolkit.rest.intercept.logging-enabled",
       "values": [
         {
           "value": false,
