--- a/rest-toolkit-utils/pom.xml
+++ b/rest-toolkit-utils/pom.xml
@@ -82,6 +82,11 @@
 
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-websocket</artifactId>
         </dependency>
 
