fix springframework version

--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
         <!-- fix spring-web:5.3.31 CVE-2016-1000027 9.8 vulnerability
                                    CVE-2024-22243 8.1 Vulnerability
                                    CVE-2024-22259 8.1 Vulnerability  -->
-        <spring-framework.version>5.3.34</spring-framework.version>
+        <springframework.version>5.3.34</springframework.version>
         <!-- fix snakeyaml:1.30 CVE-2022-25857 7.5 vulnerability
                                 CVE-2022-38751 6.5 vulnerability
                                 CVE-2022-38752 6.5 vulnerability
@@ -218,24 +218,36 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>${spring-framework.version}</version>
+                <version>${springframework.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>${spring-framework.version}</version>
+                <version>${springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>${spring-framework.version}</version>
+                <version>${springframework.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
-                <version>${spring-framework.version}</version>
+                <version>${springframework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${springframework.version}</version>
             </dependency>
 
             <dependency>
